--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "ES2022",
+    "module": "esnext",
     "jsx": "react-jsx",
     "strict": true,
-    "moduleResolution": "Bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -14,5 +14,12 @@
     "emitDeclarationOnly": false,
     "downlevelIteration": true
   },
-  "include": ["src"]
+  "include": [
+    ".storybook/**/*",
+    "build_utils/**/*",
+    "src/**/*",
+    "jest.setup.ts",
+    "svgrConfig.ts",
+    "cypress/**/*"
+  ]
 }
