chore(main): added fixes

--- a/package.json
+++ b/package.json
@@ -109,18 +109,18 @@
     "storybook:build:prod:buildStats": "cross-env STORY_ENV=production INCLUDE_BUILD_STATS=true storybook build",
     "storybook:build:prod:visualizer:buildStats": "cross-env STORY_ENV=production INCLUDE_VISUALIZER=true INCLUDE_BUILD_STATS=true storybook build",
     "storybook:serve": "node scripts/serve_storybook.js",
-    "version-bump:patch": "npx release-it patch",
-    "version-bump:minor": "npx release-it minor",
-    "version-bump:major": "npx release-it major",
-    "version-bump:major:alpha": "npx release-it major prerelease --preRelease=alpha",
-    "version-bump:major:beta": "npx release-it major prerelease --preRelease=beta",
-    "version-bump:major:rc": "npx release-it major prerelease --preRelease=rc",
-    "version-bump:minor:alpha": "npx release-it minor prerelease --preRelease=alpha",
-    "version-bump:minor:beta": "npx release-it minor prerelease --preRelease=beta",
-    "version-bump:minor:rc": "npx release-it minor prerelease --preRelease=rc",
-    "version-bump:patch:alpha": "npx release-it patch prerelease --preRelease=alpha",
-    "version-bump:patch:beta": "npx release-it patch prerelease --preRelease=beta",
-    "version-bump:patch:rc": "npx release-it patch prerelease --preRelease=rc"
+    "version-bump:patch:release": "npx release-it patch --ci",
+    "version-bump:minor:release": "npx release-it minor --ci",
+    "version-bump:major:release": "npx release-it major --ci",
+    "version-bump:patch:alpha": "npx release-it patch prerelease --preRelease=alpha --ci",
+    "version-bump:minor:alpha": "npx release-it minor prerelease --preRelease=alpha --ci",
+    "version-bump:major:alpha": "npx release-it major prerelease --preRelease=alpha --ci",
+    "version-bump:patch:beta": "npx release-it patch prerelease --preRelease=beta --ci",
+    "version-bump:minor:beta": "npx release-it minor prerelease --preRelease=beta --ci",
+    "version-bump:major:beta": "npx release-it major prerelease --preRelease=beta --ci",
+    "version-bump:patch:rc": "npx release-it patch prerelease --preRelease=rc --ci",
+    "version-bump:minor:rc": "npx release-it minor prerelease --preRelease=rc --ci",
+    "version-bump:major:rc": "npx release-it major prerelease --preRelease=rc --ci"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.8",
