--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "preinstall": "if [ \"$SKIP_PREINSTALL\" != \"true\" ]; then node -e \"if(process.env.npm_execpath.indexOf('pnpm') === -1) throw new Error('You must use pnpm to install dependencies')\"; else echo 'Skipping preinstall script'; fi",
+    "serve": "node scripts/serve.js",
     "rm-dist": "rimraf dist --glob",
     "rm-node_modules": "rimraf node_modules --glob",
     "rm-package-lock": "rimraf package-lock.json",
@@ -21,7 +22,6 @@
     "debug": "node --inspect",
     "debug-brk": "node --inspect-brk",
     "clean": "pnpm rm-pnpm-lock && pnpm rm-node_modules",
-    "serve": "node scripts/serve.js",
     "start": "cross-env BE_ENV=development APP_ENV=development INCLUDE_FEDERATION=true webpack serve",
     "start:visualizer": "cross-env BE_ENV=development APP_ENV=development INCLUDE_FEDERATION=true INCLUDE_VISUALIZER=true webpack serve",
     "start:buildStats": "cross-env BE_ENV=development APP_ENV=development INCLUDE_FEDERATION=true INCLUDE_BUILD_STATS=true webpack serve",
@@ -89,6 +89,7 @@
     "e2e-run": "cypress run --spec cypress/e2e/app/App.cy.ts",
     "e2e-open-all": "cypress open",
     "e2e-run-all": "cypress run",
+    "e2e-run:pre-commit": "pnpm e2e-run",
     "knip": "cross-env APP_ENV=production BE_ENV=production knip",
     "knip:debug": "pnpm knip --debug",
     "knip:check-files": "pnpm knip --include files",
@@ -123,41 +124,41 @@
     "version-bump:major:rc": "npx release-it major prerelease --preRelease=rc --ci"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.25.8",
-    "@babel/generator": "^7.25.7",
-    "@babel/parser": "^7.25.8",
-    "@babel/preset-env": "^7.25.8",
-    "@babel/preset-react": "^7.25.7",
-    "@babel/traverse": "^7.25.7",
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
-    "@commitlint/cz-commitlint": "^19.5.0",
-    "@eslint/compat": "^1.2.4",
+    "@babel/eslint-parser": "^7.26.5",
+    "@babel/generator": "^7.26.5",
+    "@babel/parser": "^7.26.5",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/traverse": "^7.26.5",
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
+    "@commitlint/cz-commitlint": "^19.6.1",
+    "@eslint/compat": "^1.2.5",
     "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.17.0",
+    "@eslint/js": "^9.18.0",
     "@reduxjs/toolkit": "^2.5.0",
     "@release-it/conventional-changelog": "^10.0.0",
-    "@storybook/addon-a11y": "^8.4.7",
-    "@storybook/addon-essentials": "^8.4.7",
-    "@storybook/addon-interactions": "^8.4.7",
-    "@storybook/addon-links": "^8.4.7",
-    "@storybook/addon-storysource": "^8.4.7",
-    "@storybook/blocks": "^8.4.7",
+    "@storybook/addon-a11y": "^8.5.0",
+    "@storybook/addon-essentials": "^8.5.0",
+    "@storybook/addon-interactions": "^8.5.0",
+    "@storybook/addon-links": "^8.5.0",
+    "@storybook/addon-storysource": "^8.5.0",
+    "@storybook/blocks": "^8.5.0",
     "@storybook/react": "8.4.7",
     "@storybook/react-webpack5": "8.4.7",
     "@svgr/core": "^8.1.0",
     "@svgr/webpack": "^8.1.0",
-    "@swc/core": "^1.9.1",
-    "@testing-library/jest-dom": "^6.6.1",
-    "@testing-library/react": "^16.0.1",
-    "@types/jest": "^29.5.13",
-    "@types/node": "^22.10.5",
-    "@types/react": "^19.0.4",
-    "@types/react-dom": "^19.0.2",
+    "@swc/core": "^1.10.7",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.7",
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
     "@types/redux-logger": "^3.0.13",
     "@types/webpack-bundle-analyzer": "^4.7.0",
     "autoprefixer": "^10.4.20",
-    "chalk": "^5.3.0",
+    "chalk": "^5.4.1",
     "commitizen": "^4.3.1",
     "compression-webpack-plugin": "^11.1.0",
     "conventional-changelog-cli": "^5.0.0",
@@ -165,7 +166,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
-    "cypress": "^13.15.2",
+    "cypress": "^13.17.0",
     "dotenv-webpack": "^8.1.0",
     "eslint": "^9.18.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -175,36 +176,36 @@
     "eslint-plugin-css-modules": "^2.12.0",
     "eslint-plugin-cypress": "^4.1.0",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jest": "^28.10.0",
+    "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-mdx": "^3.1.5",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-prettier": "^5.2.2",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-storybook": "^0.11.2",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "express-static-gzip": "^2.2.0",
     "globals": "^15.14.0",
     "html-webpack-plugin": "^5.6.3",
-    "husky": "^9.1.6",
+    "husky": "^9.1.7",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "knip": "^5.33.3",
-    "lint-staged": "^15.2.10",
+    "knip": "^5.42.2",
+    "lint-staged": "^15.4.1",
     "mini-css-extract-plugin": "^2.9.2",
-    "postcss": "^8.4.47",
+    "postcss": "^8.5.1",
     "postcss-loader": "^8.1.1",
-    "postcss-preset-env": "^10.0.7",
-    "prettier": "^3.3.3",
+    "postcss-preset-env": "^10.1.3",
+    "prettier": "^3.4.2",
     "release-it": "^18.1.1",
     "rimraf": "^6.0.1",
-    "sass": "^1.80.3",
-    "sass-loader": "^16.0.3",
-    "storybook": "^8.4.7",
+    "sass": "^1.83.4",
+    "sass-loader": "^16.0.4",
+    "storybook": "^8.5.0",
     "storybook-addon-render-modes": "^0.0.11",
     "style-loader": "^4.0.0",
-    "stylelint": "^16.10.0",
+    "stylelint": "^16.13.2",
     "stylelint-config-clean-order": "^7.0.0",
     "stylelint-config-hudochenkov": "^11.0.0",
     "stylelint-config-idiomatic-order": "^10.0.0",
@@ -212,17 +213,17 @@
     "stylelint-config-standard-scss": "^14.0.0",
     "stylelint-order": "^6.0.4",
     "swc-loader": "^0.2.6",
-    "terser-webpack-plugin": "^5.3.10",
+    "terser-webpack-plugin": "^5.3.11",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.19.1",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.20.0",
     "url-loader": "^4.1.1",
-    "validate-branch-name": "^1.3.1",
-    "webpack": "^5.96.1",
+    "validate-branch-name": "^1.3.2",
+    "webpack": "^5.97.1",
     "webpack-assets-manifest": "^5.2.1",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.1.0",
+    "webpack-dev-server": "^5.2.0",
     "webpack-merge": "^6.0.1",
     "workbox-webpack-plugin": "^7.3.0"
   },
@@ -233,7 +234,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
-    "react-router": "^7.1.1",
+    "react-router": "^7.1.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^3.1.0",
     "workbox-cacheable-response": "^7.3.0",
